--- a/package.json
+++ b/package.json
@@ -89,7 +89,8 @@
     "@emotion/styled": "^11.8.1",
     "@gatsbyjs/reach-router": "^1.3.6",
     "@mui/icons-material": "^5.5.1",
-    "@mui/material": "^5.5.2",
+    "@mui/lab": "^5.0.0-alpha.110",
+    "@mui/material": "^5.10.16",
     "@mui/system": "^5.5.2",
     "archiver": "^5.0.2",
     "avrgirl-arduino": "keyboardio/avrgirl-arduino#serialport-10",
