--- a/package.json
+++ b/package.json
@@ -130,7 +130,18 @@
     "@babel/core": "^7.17.8",
     "@babel/plugin-proposal-optional-chaining": "^7.16.7",
     "@babel/preset-env": "^7.16.11",
-    "@babel/preset-react": "^7.16.7",
+    "@babel/preset-react": "^7.18.6",
+    "@electron-forge/cli": "^6.0.5",
+    "@electron-forge/maker-deb": "^6.0.5",
+    "@electron-forge/maker-dmg": "^6.0.5",
+    "@electron-forge/maker-rpm": "^6.0.5",
+    "@electron-forge/maker-squirrel": "^6.0.5",
+    "@electron-forge/maker-zip": "^6.0.5",
+    "@electron-forge/plugin-auto-unpack-natives": "^6.0.5",
+    "@electron-forge/plugin-webpack": "^6.0.5",
+    "@electron-forge/publisher-github": "^6.0.5",
+    "@electron/notarize": "^1.2.3",
+    "@electron/osx-sign": "^1.0.4",
     "@spotxyz/universal": "",
     "app-builder-lib": "^23.0.3",
     "babel-plugin-module-resolver": "^4.1.0",
