stylelint: we now need to ignore value-no-vendor-prefix to make tooling happy

--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -6,6 +6,7 @@
     "declaration-colon-newline-after": null,
     "value-list-max-empty-lines": null,
     "property-no-vendor-prefix": null,
-    "value-no-vendor-prefix": null
+    "value-no-vendor-prefix": null,
+    "selector-class-pattern": null
   }
 }
