--- a/package.json
+++ b/package.json
@@ -7,28 +7,9 @@
     "email": "help@keyboard.io"
   },
   "homepage": "https://github.com/keyboardio/Chrysalis",
-  "scripts": {
-    "precompile": "node tools/precompile.mjs",
-    "preinstall": "node tools/preinstall.js",
-    "postinstall": "electron-builder install-app-deps",
-    "start": "yarn run precompile &&  electron-webpack dev",
-    "compile": "electron-webpack",
-    "build:all": "npm-run-all compile --parallel 'electron-builder -m' 'electron-builder -w' 'electron-builder -l'",
-    "build:osx": "yarn compile && electron-builder -m",
-    "build:mac": "yarn run build:osx",
-    "build:windows": "yarn compile && electron-builder -w",
-    "build:win": "yarn run build:windows",
-    "build:linux": "yarn compile && electron-builder -l",
-    "build:Linux": "yarn run build:linux",
-    "build:Windows": "yarn run build:windows",
-    "build:macOS": "yarn run build:osx",
-    "prettier": "prettier --write \"src/**/*.{js,json,css,scss,md}\"",
-    "lint:all": "npm-run-all lint:js lint:css",
-    "lint:js": "eslint src/**/*.js",
-    "lint:css": "stylelint src/**/*.css",
-    "clean:code": "npm-run-all prettier lint:all",
-    "firmware:update": "tools/firmware-update"
-  },
+  "productName": "chrysalis",
+  "description": "A keyboard configuration tool",
+  "main": ".webpack/main",
   "husky": {
     "hooks": {
       "pre-commit": "npm-run-all -p lint:all"
@@ -84,50 +65,33 @@
       "NEWS.md"
     ]
   },
-  "dependencies": {
-    "@emotion/react": "^11.8.2",
-    "@emotion/styled": "^11.8.1",
-    "@gatsbyjs/reach-router": "^1.3.6",
-    "@mui/icons-material": "^5.5.1",
-    "@mui/material": "^5.5.2",
-    "@mui/system": "^5.5.2",
-    "archiver": "^5.0.2",
-    "avrgirl-arduino": "keyboardio/avrgirl-arduino#serialport-10",
-    "electron-devtools-installer": "^3.1.1",
-    "electron-store": "^8.0.1",
-    "electron-updater": "^5.0.1",
-    "electron-window-state": "^5.0.3",
-    "i18next": "^21.6.14",
-    "i18next-electron-language-detector": "^0.0.10",
-    "immutability-helper": "^3.1.1",
-    "js-yaml": "^4.1.0",
-    "json-stringify-pretty-compact": "^3.0.0",
-    "lodash.clonedeep": "^4.5.0",
-    "lodash.isequal": "^4.5.0",
-    "react": "^17.0.2",
-    "react-color": "^2.14.1",
-    "react-dnd": "^16.0.1",
-    "react-dnd-html5-backend": "^16.0.1",
-    "react-dom": "^17.0.2",
-    "react-i18next": "^11.8.5",
-    "react-markdown": "^7.1.0",
-    "react-rnd": "^10.3.7",
-    "remark-emoji": "^3.0.2",
-    "remark-gfm": "^3.0.1",
-    "serialport": "^10.4.0",
-    "source-map-support": "^0.5.16",
-    "sudo-prompt": "^9.2.1",
-    "systeminformation": "^5.3.1",
-    "teensy-loader": "^0.3.1",
-    "tmp": "^0.2.1",
-    "typeface-roboto": "^0.0.54",
-    "typeface-source-code-pro": "^0.0.71",
-    "usb": "^2.5.1",
-    "uuid": "^8.3.1",
-    "winston": "^3.7.2"
+  "scripts": {
+    "precompile": "node tools/precompile.mjs",
+    "preinstall": "node tools/preinstall.js",
+    "start": "yarn run precompile && electron-forge start",
+    "package": "electron-forge package",
+    "make": "yarn run precompile && electron-forge make",
+    "publish": "electron-forge publish",
+    "prettier": "prettier --write \"src/**/*.{js,json,css,scss,md}\"",
+    "lint:all": "npm-run-all lint:js lint:css",
+    "lint:js": "eslint src/**/*.js",
+    "lint:css": "stylelint src/**/*.css",
+    "clean:code": "npm-run-all prettier lint:all",
+    "build:all": "npm-run-all precompile --parallel 'electron-builder -m' 'electron-builder -w' 'electron-builder -l'",
+    "build:osx": "yarn run precompile && electron-builder -m",
+    "build:mac": "yarn run build:osx",
+    "build:windows": "yarn run compile && electron-builder -w",
+    "build:win": "yarn run build:windows",
+    "build:linux": "yarn run precompile && electron-builder -l",
+    "build:Linux": "yarn run build:linux",
+    "build:Windows": "yarn run build:windows",
+    "build:macOS": "yarn run build:osx",
+    "postinstall": "electron-builder install-app-deps"
   },
+  "keywords": [],
   "devDependencies": {
-    "@babel/core": "^7.17.8",
+    "@babel/core": "^7.21.0",
+    "@babel/eslint-parser": "^7.19.1",
     "@babel/plugin-proposal-optional-chaining": "^7.16.7",
     "@babel/preset-env": "^7.16.11",
     "@babel/preset-react": "^7.18.6",
@@ -144,15 +108,16 @@
     "@electron/osx-sign": "^1.0.4",
     "@spotxyz/universal": "",
     "app-builder-lib": "^23.0.3",
+    "babel-loader": "^9.1.2",
     "babel-plugin-module-resolver": "^4.1.0",
     "cldr": "^7.1.1",
+    "copy-webpack-plugin": "^11.0.0",
     "core-js": "^3.21.1",
-    "electron": "17",
-    "electron-builder": "^23.0.3",
-    "electron-builder-notarize": "^1.2.0",
-    "electron-webpack": "^2.8.2",
-    "electron-webpack-eslint": "^6.0.0",
-    "eslint": "^6.8.0",
+    "css-loader": "^6.0.0",
+    "electron": "23.1.1",
+    "electron-builder": "^23.6.0",
+    "electron-builder-notarize": "^1.5.1",
+    "eslint": "^8.35.0",
     "eslint-config-prettier": "^4.1.0",
     "eslint-import-resolver-babel-module": "^5.3.1",
     "eslint-import-resolver-webpack": "^0.13.2",
@@ -164,17 +129,66 @@
     "husky": "^1.1.2",
     "lint-staged": "^12.3.7",
     "node-abi": "^3.8.0",
+    "node-loader": "^2.0.0",
     "npm-run-all": "^4.1.3",
     "prettier": "^2.6.1",
+    "style-loader": "^3.0.0",
     "stylelint": "^14.6.1",
     "stylelint-config-standard": "^25.0.0",
     "unraw": "^2.0.0",
-    "webpack": "4.46.0",
+    "webpack": "^5.75.0",
     "xml2js": "^0.4.23",
     "yarn": "^1.22.0"
   },
+  "dependencies": {
+    "@emotion/react": "^11.8.2",
+    "@emotion/styled": "^11.8.1",
+    "@gatsbyjs/reach-router": "^1.3.6",
+    "@mui/base": "^5.0.0-alpha.119",
+    "@mui/icons-material": "^5.5.1",
+    "@mui/material": "^5.11.11",
+    "@mui/system": "^5.11.11",
+    "@vercel/webpack-asset-relocator-loader": "1.7.3",
+    "archiver": "^5.0.2",
+    "avrgirl-arduino": "keyboardio/avrgirl-arduino#serialport-10",
+    "electron-devtools-installer": "^3.2.0",
+    "electron-squirrel-startup": "^1.0.0",
+    "electron-store": "^8.1.0",
+    "electron-updater": "^5.3.0",
+    "electron-window-state": "^5.0.3",
+    "file-loader": "^6.2.0",
+    "i18next": "^22.4.10",
+    "i18next-electron-language-detector": "^0.0.10",
+    "immutability-helper": "^3.1.1",
+    "js-yaml": "^4.1.0",
+    "json-stringify-pretty-compact": "^3.0.0",
+    "lodash.clonedeep": "^4.5.0",
+    "lodash.isequal": "^4.5.0",
+    "path-browserify": "^1.0.1",
+    "react": "^18.2.0",
+    "react-color": "^2.14.1",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
+    "react-dom": "^18.2.0",
+    "react-i18next": "^11.8.5",
+    "react-markdown": "^7.1.0",
+    "react-rnd": "^10.3.7",
+    "remark-emoji": "^3.0.2",
+    "remark-gfm": "^3.0.1",
+    "serialport": "^10.4.0",
+    "source-map-support": "^0.5.16",
+    "sudo-prompt": "^9.2.1",
+    "systeminformation": "^5.17.12",
+    "teensy-loader": "^0.3.1",
+    "tmp": "^0.2.1",
+    "typeface-roboto": "^0.0.54",
+    "typeface-source-code-pro": "^0.0.71",
+    "usb": "2.8.1",
+    "uuid": "^8.3.1",
+    "winston": "^3.8.2"
+  },
   "resolutions": {
-    "teensy-loader/usb": "^2.5.1",
+    "teensy-loader/usb": "^2.8.1",
     "avrgirl-arduino/stk500-v2/async": "^2.6.4",
     "avrgirl-arduino/stk500/async": "^2.6.4",
     "cacache/y18n": "^4.0.1",
