--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "chrysalis",
-  "version": "v0.13.0",
+  "version": "0.13.1",
   "license": "MIT",
   "author": {
     "name": "Jesse Vincent",
