--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -56,5 +56,5 @@ jobs:
         run: yarn run precompile
       - name: Release
         env:
-          GITHUB_TOKEN: ${{ secrets.github_token }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: yarn run publish
