--- a/package.json
+++ b/package.json
@@ -54,7 +54,6 @@
       ]
     },
     "afterPack": "./build/afterPackHook.js",
-    "afterSign": "electron-builder-notarize",
     "extraResources": [
       {
         "from": "./build/launcher.sh",
@@ -76,17 +75,7 @@
     "lint:all": "npm-run-all lint:js lint:css",
     "lint:js": "eslint src/**/*.js",
     "lint:css": "stylelint src/**/*.css",
-    "clean:code": "npm-run-all prettier lint:all",
-    "build:all": "npm-run-all precompile --parallel 'electron-builder -m' 'electron-builder -w' 'electron-builder -l'",
-    "build:osx": "yarn run precompile && electron-builder -m",
-    "build:mac": "yarn run build:osx",
-    "build:windows": "yarn run compile && electron-builder -w",
-    "build:win": "yarn run build:windows",
-    "build:linux": "yarn run precompile && electron-builder -l",
-    "build:Linux": "yarn run build:linux",
-    "build:Windows": "yarn run build:windows",
-    "build:macOS": "yarn run build:osx",
-    "postinstall": "electron-builder install-app-deps"
+    "clean:code": "npm-run-all prettier lint:all"
   },
   "keywords": [],
   "devDependencies": {
