--- a/package.json
+++ b/package.json
@@ -21,10 +21,7 @@
     "artifactName": "${productName}-${version}.${ext}",
     "copyright": "Copyright © 2018-2022 Keyboardio Inc.; distributed under the GPLv3",
     "win": {
-      "target": [
-        "nsis",
-        "portable"
-      ]
+      "target": ["nsis", "portable"]
     },
     "portable": {
       "artifactName": "${productName}-${version}-portable.${ext}"
@@ -36,22 +33,16 @@
       "target": [
         {
           "target": "dmg",
-          "arch": [
-            "universal"
-          ]
+          "arch": ["universal"]
         },
         {
           "target": "zip",
-          "arch": [
-            "universal"
-          ]
+          "arch": ["universal"]
         }
       ]
     },
     "linux": {
-      "target": [
-        "AppImage"
-      ]
+      "target": ["AppImage"]
     },
     "afterPack": "./build/afterPackHook.js",
     "extraResources": [
@@ -95,7 +86,6 @@
     "@electron/notarize": "^1.2.3",
     "@electron/osx-sign": "^1.0.4",
     "@spotxyz/universal": "",
-    "app-builder-lib": "^23.0.3",
     "babel-loader": "^9.1.2",
     "babel-plugin-module-resolver": "^4.1.0",
     "cldr": "^7.1.1",
