--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "chrysalis",
-  "version": "v0.13.6",
+  "version": "0.13.7",
   "license": "MIT",
   "author": {
     "name": "Jesse Vincent",
@@ -21,7 +21,10 @@
     "artifactName": "${productName}-${version}.${ext}",
     "copyright": "Copyright © 2018-2022 Keyboardio Inc.; distributed under the GPLv3",
     "win": {
-      "target": ["nsis", "portable"]
+      "target": [
+        "nsis",
+        "portable"
+      ]
     },
     "portable": {
       "artifactName": "${productName}-${version}-portable.${ext}"
@@ -33,16 +36,22 @@
       "target": [
         {
           "target": "dmg",
-          "arch": ["universal"]
+          "arch": [
+            "universal"
+          ]
         },
         {
           "target": "zip",
-          "arch": ["universal"]
+          "arch": [
+            "universal"
+          ]
         }
       ]
     },
     "linux": {
-      "target": ["AppImage"]
+      "target": [
+        "AppImage"
+      ]
     },
     "afterPack": "./build/afterPackHook.js",
     "extraResources": [
