--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -55,4 +55,6 @@ jobs:
       - name: CLDR build
         run: yarn run precompile
       - name: Release
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: yarn run publish
