--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -47,7 +47,7 @@ jobs:
         run: yarn
       - name: Add MacOS certs
         if: matrix.os == 'macos-latest' && startsWith(github.ref, 'refs/tags/')
-        run: chmod +x add-osx-cert.sh && ./add-osx-cert.sh
+        run: chmod +x ./tools/add-osx-cert.sh && ./tools/add-osx-cert.sh
         env:
           CERTIFICATE_OSX_APPLICATION:  ${{ secrets.mac_certs }}
           CERTIFICATE_PASSWORD: ${{ secrets.mac_certs_password }}
