--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -49,8 +49,8 @@ jobs:
         if: matrix.os == 'macos-latest' && startsWith(github.ref, 'refs/tags/')
         run: chmod +x ./tools/add-osx-cert.sh && ./tools/add-osx-cert.sh
         env:
-          CERTIFICATE_OSX_APPLICATION:  ${{ secrets.mac_certs }}
-          CERTIFICATE_PASSWORD: ${{ secrets.mac_certs_password }}
+          CERTIFICATE_OSX_P12:  ${{ secrets.mac_certs }}
+          CERTIFICATE_OSX_PASSWORD: ${{ secrets.mac_certs_password }}
       - name: Release
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
