restrict debug info

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -46,4 +46,4 @@ jobs:
           APPLE_ID: ${{ secrets.APPLE_ID }}
           APPLE_PASSWORD: ${{ secrets.APPLE_PASSWORD }}
           APPLE_TEAM_ID: ${{ secrets.APPLE_TEAM_ID }}
-        run: DEBUG=* yarn run publish
+        run: DEBUG="*,-babel,-babel:config:loading:files:configuration,-agentkeepalive" yarn run publish
