--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,5 +1,4 @@
-name: Snapshot build & publish
-
+name: Release
 on:
   push:
     branches:
@@ -29,30 +28,24 @@ jobs:
       - name: Set up yarn network timeout
         run: yarn config set network-timeout 1000000 -g
 
-      - name: Get yarn cache directory path
-        id: yarn-cache-dir-path
-        run: echo "::set-output name=dir::$(yarn cache dir)"
-
-      - uses: actions/cache@v3
-        id: yarn-cache
-        with:
-          path: ${{ steps.yarn-cache-dir-path.outputs.dir }}
-          key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-yarn-
-
       - name: Install Yarn dependencies
         env:
           YARN_GPG: no
           GITHUB_RUN_NUMBER: ${{ github.run_number }}
         run: yarn
 
-      - name: Prepare for app notarization
-        if: startsWith(matrix.os, 'macos')
-        # Import Apple API key for app notarization on macOS
-        run: |
-          mkdir -p ~/private_keys/
-          echo '${{ secrets.api_key }}' > ~/private_keys/AuthKey_${{ secrets.api_key_id }}.p8
-      - name: Build
-        run: yarn run make
-
+      - name: Add MacOS certs
+        if: matrix.os == 'macos-latest' && startsWith(github.ref, 'refs/tags/')
+        run: chmod +x ./tools/add-osx-cert.sh && ./tools/add-osx-cert.sh
+        env:
+          CERTIFICATE_OSX_P12:  ${{ secrets.mac_certs }}
+          CERTIFICATE_OSX_PASSWORD: ${{ secrets.mac_certs_password }}
+      - name: Check certs
+        run: security find-identity -p codesigning -v
+      - name: Release
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          APPLE_ID: ${{ secrets.APPLE_ID }}
+          APPLE_PASSWORD: ${{ secrets.APPLE_PASSWORD }}
+          APPLE_TEAM_ID: ${{ secrets.APPLE_TEAM_ID }}
+        run: DEBUG="*,-babel,-babel:config:loading:files:configuration,-agentkeepalive" yarn run package
