--- a/package.json
+++ b/package.json
@@ -118,6 +118,7 @@
     "tmp": "^0.2.1",
     "typeface-roboto": "^0.0.54",
     "typeface-source-code-pro": "^0.0.71",
+    "update-electron-app": "^2.0.1",
     "usb": "2.8.1",
     "uuid": "^8.3.1",
     "winston": "^3.8.2"
