--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -62,4 +62,4 @@ jobs:
           APPLE_ID: ${{ secrets.APPLE_ID }}
           APPLE_PASSWORD: ${{ secrets.APPLE_PASSWORD }}
           APPLE_TEAM_ID: ${{ secrets.APPLE_TEAM_ID }}
-        run:  yarn run publish
+        run:  yarn run publish --arch=universal
