--- a/package.json
+++ b/package.json
@@ -106,7 +106,7 @@
     "@electron-forge/publisher-github": "^6.0.5",
     "@electron/notarize": "^1.2.3",
     "@electron/osx-sign": "^1.0.4",
-    "@spotxyz/universal": "",
+    "@electron/universal": "^1.3.4",
     "app-builder-lib": "^23.0.3",
     "@reforged/maker-appimage": "file:.@reforged/maker-appimage",
     "babel-loader": "^9.1.2",
@@ -195,7 +195,6 @@
     "cacache/y18n": "^4.0.1",
     "yargs/y18n": "^4.0.1",
     "**/node-forge": "^1.3.0",
-    "**/glob-parent": "^5.1.2",
-    "**/@electron/universal": "npm:@spotxyz/universal"
+    "**/glob-parent": "^5.1.2"
   }
 }
