--- a/package.json
+++ b/package.json
@@ -84,7 +84,7 @@
     "@electron-forge/publisher-github": "^6.0.5",
     "@electron/notarize": "^1.2.3",
     "@electron/osx-sign": "^1.0.4",
-    "@spotxyz/universal": "",
+    "@electron/universal": "^1.3.4",
     "babel-loader": "^9.1.2",
     "babel-plugin-module-resolver": "^4.1.0",
     "cldr": "^7.1.1",
@@ -169,7 +169,6 @@
     "cacache/y18n": "^4.0.1",
     "yargs/y18n": "^4.0.1",
     "**/node-forge": "^1.3.0",
-    "**/glob-parent": "^5.1.2",
-    "**/@electron/universal": "npm:@spotxyz/universal"
+    "**/glob-parent": "^5.1.2"
   }
 }
