--- a/package.json
+++ b/package.json
@@ -21,10 +21,7 @@
     "artifactName": "${productName}-${version}.${ext}",
     "copyright": "Copyright © 2018-2022 Keyboardio Inc.; distributed under the GPLv3",
     "win": {
-      "target": [
-        "nsis",
-        "portable"
-      ]
+      "target": ["nsis", "portable"]
     },
     "portable": {
       "artifactName": "${productName}-${version}-portable.${ext}"
@@ -36,25 +33,18 @@
       "target": [
         {
           "target": "dmg",
-          "arch": [
-            "universal"
-          ]
+          "arch": ["universal"]
         },
         {
           "target": "zip",
-          "arch": [
-            "universal"
-          ]
+          "arch": ["universal"]
         }
       ]
     },
     "linux": {
-      "target": [
-        "AppImage"
-      ]
+      "target": ["AppImage"]
     },
     "afterPack": "./build/afterPackHook.js",
-    "afterSign": "electron-builder-notarize",
     "extraResources": [
       {
         "from": "./build/launcher.sh",
@@ -76,17 +66,7 @@
     "lint:all": "npm-run-all lint:js lint:css",
     "lint:js": "eslint src/**/*.js",
     "lint:css": "stylelint src/**/*.css",
-    "clean:code": "npm-run-all prettier lint:all",
-    "build:all": "npm-run-all precompile --parallel 'electron-builder -m' 'electron-builder -w' 'electron-builder -l'",
-    "build:osx": "yarn run precompile && electron-builder -m",
-    "build:mac": "yarn run build:osx",
-    "build:windows": "yarn run compile && electron-builder -w",
-    "build:win": "yarn run build:windows",
-    "build:linux": "yarn run precompile && electron-builder -l",
-    "build:Linux": "yarn run build:linux",
-    "build:Windows": "yarn run build:windows",
-    "build:macOS": "yarn run build:osx",
-    "postinstall": "electron-builder install-app-deps"
+    "clean:code": "npm-run-all prettier lint:all"
   },
   "keywords": [],
   "devDependencies": {
@@ -107,7 +87,6 @@
     "@electron/notarize": "^1.2.3",
     "@electron/osx-sign": "^1.0.4",
     "@electron/universal": "^1.3.4",
-    "app-builder-lib": "^23.0.3",
     "@reforged/maker-appimage": "file:.@reforged/maker-appimage",
     "babel-loader": "^9.1.2",
     "babel-plugin-module-resolver": "^4.1.0",
