--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -69,5 +69,22 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run:  yarn run publish 
+      - name: Generate latest.yml upgrade files
+        run: |
+          find out
+          mkdir out/artifacts
+          mv out/make/zip/*/*/*.zip out/artifacts
+          mv out/make/*.dmg out/artifacts
+          mv out/make/*.AppImage out/artifacts
+          cd out/artifacts
+          node tools/generate-latest.js
 
+      - name: Upload latest.yml upgrade files
+        uses: svenstaro/upload-release-action@v2
+        with:
+          repo_token: ${{ secrets.GITHUB_TOKEN }}
+          file: out/artifacts/*.yml*
+          tag: ${{ github.ref }}
+          overwrite: true
+          file_glob: true
 
