--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -73,9 +73,9 @@ jobs:
         run: |
           find out
           mkdir out/artifacts
-          cp out/make/zip/*/*/*.zip out/artifacts || true
-          cp out/make/*.dmg out/artifacts || true
-          cp out/make/AppImage/x64/*.AppImage out/artifacts || true
+          find out/make/zip -name \*.zip  -exec cp {} out/artifacts \;
+          find out/make -name \*.dmg -exec cp {} out/artifacts \;
+          find out/make -name \*.AppImage exec cp {} out/artifacts \;
           cd out/artifacts
           node tools/generate-latest.js
 
