--- a/.@reforged/ReForged-maker-appimage/package.json
+++ b/.@reforged/ReForged-maker-appimage/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ReForged-maker-appimage",
+  "name": "@Reforged/maker-appimage",
   "version": "3.1.8",
   "description": "An AppImage maker implementation for the Electron Forge.",
   "main": "dist/main.js",
