--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,10 +2,10 @@ name: Release
 on:
   push:
     branches:
-      - master
+      - 'master'
 
 jobs:
-  build:
+  release:
     runs-on: ${{ matrix.os }}
 
     strategy:
@@ -21,7 +21,7 @@ jobs:
         with:
           node-version: 16
       - name: Install the Apple certificate and provisioning profile
-        if: matrix.os == 'macos-latest' && startsWith(github.ref, 'refs/tags/')
+        if: matrix.os == 'macos-latest'
         env:
           BUILD_CERTIFICATE_BASE64: ${{ secrets.mac_certs }}
           P12_PASSWORD: ${{ secrets.mac_certs_password }}
@@ -56,15 +56,17 @@ jobs:
           YARN_GPG: no
           GITHUB_RUN_NUMBER: ${{ github.run_number }}
         run: yarn
-      - name: Build (macos)
+      - name: Set snapshot version 
+        run: yarn version --no-git-tag-version --prerelease --preid=snapshot
+      - name: Release (macos)
         if: matrix.os == 'macos-latest'
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           APPLE_ID: ${{ secrets.APPLE_ID }}
           APPLE_PASSWORD: ${{ secrets.APPLE_PASSWORD }}
           APPLE_TEAM_ID: ${{ secrets.APPLE_TEAM_ID }}
-        run:  yarn run package --arch=universal
-      - name: Build (non-macos)
+        run:  yarn run make --arch=universal
+      - name: Release (non-macos)
         if: matrix.os != 'macos-latest'
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -81,7 +83,6 @@ jobs:
           # rename our artifacts to "-snapshot"
           for i in ./*.* ; do mv "$i" "${i/`npm pkg get version|tr -d '\"'`/snapshot}" ; done
           node ../../tools/generate-latest.js snapshot
-
       - name: Upload latest.yml upgrade files
         uses: svenstaro/upload-release-action@v2
         with:
